--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -50,10 +50,11 @@ button {
   font-size: 20px;
   line-height: 24px;
   color: rgb(98, 98, 98);
-  background-color:#ffffff;
+  /* background-color:#ffffff; */
   border: 1px rgb(98, 98, 98) solid;
   padding: 0;
   width: 162px;
   height: 58px;
   display: inline-block;
+  background-color: transparent;
 }
