--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -12,11 +12,12 @@
 body {
   font-family: 'Playfair Display', serif;
   color: rgb(98, 98, 98);
+  font-size: 14px;
   line-height: 24px;
+  width: 1200px;
   background-image: url('img\Livello 7.png') width "1200" height "1446";
-  /* width: 900px; */
-  margin: 0 auto;
-  padding: 70px 90px 22px 150px;
+  padding: 70px 150px 22px 150px;
+  box-sizing: border-box;
 }
 
 header {
@@ -25,18 +26,26 @@ header {
 
 ul {
   list-style: none;
-  width: 90%;
+  font-size: 0;
+  /* width: 90%; */
   margin: 0 auto;
-  padding: 0 122px;
+  padding: 0 164px 0 162px;
 }
 
-.nav {
-  width: 100%;
+section {
+  font-size: 0;
+	line-height: 0;
+	letter-spacing: -1px;
+}
+
+h2 {
+  line-height: 36px;
+  font-size: 30px;
 }
 
 .main-nav-item {
   display: inline-block;
-  margin: 0 20px;
+  font-size: 14px;
 }
 
 .main-nav-item.lifestyle {
@@ -55,8 +64,6 @@ ul {
   text-transform: uppercase;
   color: rgb(98, 98, 98);
   text-decoration: none;
-  font-size: 14px;
-  line-height: 24px;
 }
 
 .main-nav-item a:hover {
@@ -64,40 +71,39 @@ ul {
 }
 
 .article {
+  font-family: 'Playfair Display', serif;
+  font-size: 14px;
+  line-height: 24px;
   display: inline-block;
   width: 420px;
   height: 473px;
-  margin-right: 60px;
   overflow: hidden;
+}
+
+.article:nth-of-type(2n+1) {
+  margin-right: 60px;
 }
 
 .article-separation {
   height: 138px;
 }
 
-h2 {
-  line-height: 36px;
-  font-size: 30px;
-  color: rgb(98, 98, 98);
-}
-
 .caption {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 14px;
   line-height: 17px;
   color: rgb(180, 173, 158);
   text-transform: uppercase;
 }
 
-button {
+.button {
   font-size: 20px;
   line-height: 24px;
   color: rgb(98, 98, 98);
-  /* background-color:#ffffff; */
   border: 1px rgb(98, 98, 98) solid;
-  padding: 0;
   width: 162px;
   height: 58px;
-  display: inline-block;
+  display: block;
   background-color: transparent;
+  margin: 88px auto 0;
 }
+
