--- a/html-css/module-03/css/style.css
+++ b/html-css/module-03/css/style.css
@@ -91,11 +91,7 @@ body {
   margin-right: 60px;
 }
 
-.article:nth-last-of-type(2) {
-  margin-bottom: 0;
-}
-
-.article:last-of-type {
+.article:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
