--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -1,144 +1,257 @@
+/* ОБЩЕЕ ОФОРМЛЕНИЕ */
 html {
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+.clearfix::after {
+  display: table;
+  content: '';
+  clear: both;
 }
 
 .visually-hidden {
-	position: absolute !important;
-	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-	clip: rect(1px, 1px, 1px, 1px);
-	padding:0 !important;
-	border:0 !important;
-	height: 1px !important;
-	width: 1px !important;
-	overflow: hidden;
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
-body {
-  font-family: 'Playfair Display', serif;
-  color: rgb(98, 98, 98);
-  font-size: 14px;
-  line-height: 24px;
-}
-/* navigation section*/
-.superheader {
-  padding: 77px 0 105px;
-}
-
-.main-nav-list {
+.list-item {
   list-style: none;
-  font-size: 0;
-  padding: 0;
-  text-align: center;
 }
 
-.main-nav-item {
-  display: inline-block;
-  font-size: 14px;
-}
-
-.main-nav-item.lifestyle {
-  margin-right: 120px;
-}
-
-.main-nav-item.photodiary {
-  margin-right: 104px;
-}
-
-.main-nav-item.music {
-  margin-right: 92px;
-}
-
-.main-nav-item a {
-  text-transform: uppercase;
-  color: rgb(98, 98, 98);
+.logo-link,
+.list-item a {
   text-decoration: none;
-  display: block;
 }
 
-.main-nav-item a:hover,
-.main-nav-item a:focus {
-  color: #03a9f4;
-}
-/* main content section*/
-.main-section {
-  font-size: 0;
-	line-height: 0;
-  letter-spacing: -1px;
-  padding-bottom: 22px;
+/* ОБОЛОЧКИ */
+body {
+  width: 1600px;
 }
 
 .container {
-  width: 900px;
+  width: 1110px;
   margin: 0 auto;
 }
 
-.article {
-  font-family: 'Playfair Display', serif;
+/* HEADER */
+.main-header {
+  width: 100%;
+  height: 102px;
+  padding: 36px 0;
+  text-transform: uppercase;
+}
+
+.main-menu {
+ /* display: block; */
+ height: 30px;
+ /* outline: 1px solid tomato; */
+}
+
+.logo {
+  /* display: block; */
+}
+
+.logo:first-letter {
+  font-weight: bold;
+  color: rgb(26, 188, 156);
+}
+
+.logo-link {
+  display: block;
+  width: 90px;
+  float: left;
+  font-size: 30px;
+  font-family: "Roboto";
+  color: rgb(85, 82, 82);
+}
+
+.menu-list {
+  float: right;
+  width: 540px;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+
+.menu.list-item {
+  display: block;
+  margin-left: 6.5%;
+  float: right;
+}
+
+.list-item a {
+  display: block;
   font-size: 14px;
-  line-height: 24px;
-  display: inline-block;
-  width: 420px;
-  margin-bottom: 137px;
+  font-family: "Open Sans";
+  color: rgb(15, 1, 1);
+  font-weight: bold;
+  line-height: 30px;
 }
 
-.article:nth-of-type(2n+1) {
-  margin-right: 60px;
+.menu.list-item a:hover,
+.menu.list-item a:focus {
+  color: rgb(26, 188, 156);
 }
 
-.article:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+/* MAIN SECTION */
+h2 {
+  font-size: 48px;
+  font-family: "Roboto";
+  text-transform: uppercase;
+  color: rgb(81, 81, 81);
+  line-height: 0.667;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
-.article-illustration {
+h2::after {
+  display: block;
+  content: "";
+  background-color: rgb(26, 188, 156);
+  /* left: 735px; */
+  width: 164px;
+  height: 7px;
+  margin: 32px auto 82px;
+}
+
+.featured-section {
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  margin-bottom: 105px;
+}
+
+.news-section {
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  margin-bottom: 82px;
+}
+
+.featured-item {
+  display: block;
+  float: left;
+  width: 255px;
+  height: 320px;
+}
+
+.featured-item:hover .caption {
+  background-color: rgb(26, 188, 156);
+}
+
+.featured-item:not(:nth-of-type(4n)) {
+  margin-right: 30px;
+}
+
+.featured-item:not(:nth-last-of-type(-n + 4)) {
   margin-bottom: 30px;
 }
 
-h2,
-p {
-  margin: 0;
-}
-
-.heading2 {
-  line-height: 36px;
-  font-size: 30px;
-  margin-bottom: 33px;
-  cursor: pointer;
-}
-
-.heading2:hover,
-.heading2:focus {
-  color: #03a9f4;
-}
-
 .caption {
-  font-family: 'Ubuntu', sans-serif;
-  line-height: 17px;
-  color: rgb(180, 173, 158);
-  text-transform: uppercase;
-  margin-bottom: 26px;
-}
-/* button footer */
-.button {
-  font-size: 20px;
-  line-height: 24px;
-  color: rgb(98, 98, 98);
-  border: 1px rgb(98, 98, 98) solid;
-  width: 162px;
-  height: 58px;
-  display: block;
-  background-color: transparent;
-  margin: 88px auto 0;
-  cursor: pointer;
+  float: left;
+  width: 255px;
+  height: 37px;
+  background-color: rgb(50, 50, 50);
+  /* vertical-align: baseline; */
+  padding-left: 13px;
 }
 
-.button:hover,
-.button:focus {
-  border-color: #03a9f4;
-  color: #03a9f4;
+.product-name {
+  display: inline-block;
+  float: left;
+  font-size: 18px;
+  line-height: 37px;
+  font-family: "Roboto";
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  /* line-height: 1.778; */
+  text-align: left;
+  margin: 0;
+  padding: 0;
+}
+
+.sum {
+  float: right;
+  width: 54px;
+  line-height: 37px;
+  background-color: rgba(255, 255, 255, .3);
+  font-size: 18px;
+  font-family: "Roboto";
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  /* line-height: 1.778; */
+  text-align: center;
+}
+
+.news-list {
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+}
+
+.news-item {
+  display: block;
+  float: left;
+  display: block;
+  width: 350px;
+}
+
+.news-item:not(:nth-of-type(3n)) {
+  margin-right: 30px;
+}
+
+
+.news-image-caption {
+  /* display: block; */
+  font-size: 18px;
+  font-family: "Open Sans";
+  color: rgb(85, 82, 82);
+  line-height: 26px;
+}
+
+.news-image-caption::after {
+  display: block;
+  content: "";
+  background-color: rgb(26, 188, 156);
+  width: 136px;
+  height: 3px;
+  margin: 11px 0 23px 0;
+}
+
+.news-text {
+  display: block;
+  font-size: 14px;
+  font-family: "Open Sans";
+  color: rgb(85, 82, 82);
+  line-height: 26px;
+  width: 353px;
+  height: 66px;
+  margin-bottom: 19px;
+}
+
+.button {
+  display: block;
+  border-radius: 3px;
+  border: none;
+  background-color: rgb(78, 198, 171);
+  width: 159px;
+  height: 51px;
+  font-size: 16px;
+  font-family: "Open Sans";
+  color: rgb(255, 255, 255);
+  line-height: 26px;
+  text-align: center;
 }
