--- a/html-css/module-04/css/style.css
+++ b/html-css/module-04/css/style.css
@@ -1,8 +1,4 @@
 /* ОБЩЕЕ ОФОРМЛЕНИЕ */
-html {
-  box-sizing: border-box;
-}
-
 *,
 *::before,
 *::after {
@@ -27,6 +23,14 @@ html {
   overflow: hidden;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto Black";
+}
+
 .list-item {
   list-style: none;
 }
@@ -38,7 +42,7 @@ html {
 
 /* ОБОЛОЧКИ */
 .container {
-  width: 1110px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 
@@ -183,6 +187,7 @@ h2::after {
 }
 
 .news-list {
+  font-family: "Open Sans";
   margin: 0;
   padding: 0;
   font-size: 0;
