--- a/html-css/module-05/css/style.css
+++ b/html-css/module-05/css/style.css
@@ -45,12 +45,15 @@ ul {
   color: rgb(26, 188, 156);
 }
 
-.container,
 .main {
   width: 1600px;
   margin: 0 auto;
 }
 
+.container {
+  width: 1110px;
+  margin: 0 auto;
+}
 /* HEADER */
 
 .main-header {
@@ -58,11 +61,6 @@ ul {
   height: 102px;
   padding: 36px 0;
   text-transform: uppercase;
-}
-
-.main-menu {
- height: 30px;
- padding: 0 245px;
 }
 
 .logo:first-letter {
@@ -104,13 +102,17 @@ ul {
 
 /* MAIN SECTION */
 
+.main {
+  background-color: #e9f0fd;
+}
+
 .slider,
 .slider-list,
 .slider-content {
   position: relative;
   width: 100%;
   height: 600px;
-  margin: 0;
+  margin: 0 0 100px;
   padding: 0;
 }
 
@@ -124,8 +126,6 @@ ul {
 .advertise-image {
   position: absolute;
   background-size: cover;
-  /* text-align: center;
-  vertical-align: middle; */
 }
 
 .image-overlayer {
@@ -135,33 +135,28 @@ ul {
   background-color: rgba(0, 0, 0, .52);
 }
 
-.advertise-link {
+.advertise-text {
   display: block;
-  width: 730px;
+  width: 806px;
   height: 100px;
   position: absolute;
+  top: 220px;
+  left: 50%;
+  transform: translateX(-50%);
   color: rgb(255, 255, 255);
-  z-index: 66;
-  /* text-align: center;
-  vertical-align: middle; */
+  text-transform: uppercase;
+  text-align: left;
 }
 
 .advertise-caption {
-  position: absolute;
   font-size: 60px;
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
   line-height: 82px;
-  text-align: left;
   margin: 0;
 }
 
 .caption-detais {
-  position: absolute;
   font-family: "Roboto Light", sans-serif;
   font-size: 24px;
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
   line-height: 54px;
   margin: 0;
 }
@@ -174,6 +169,7 @@ ul {
   margin: 0;
   padding: 0;
   background-color: transparent;
+  font-size: 100px;
   color: #fff;
   top: 50%;
   transform: translateY(-50%);
@@ -195,7 +191,6 @@ ul {
 .slider-arrow::before {
   position: absolute;
   font-family: "Pe-icon-7-stroke";
-  font-size: 100px;
   display: block;
   transform: translateY(-50%);
 }
@@ -216,7 +211,7 @@ h2 {
   color: rgb(81, 81, 81);
   line-height: 32px;
   text-align: center;
-  margin: 0;
+  margin: 0 0 80px;
 }
 
 h2::after {
@@ -225,17 +220,12 @@ h2::after {
   background-color: rgb(26, 188, 156);
   width: 164px;
   height: 7px;
-  margin: 32px auto 80px;
-}
-
-.new-collection-section {
-  padding: 160px 245px 98px;
-  background-color: #e9f0fd;
+  margin: 32px auto;
 }
 
 .new-collection-list {
   margin: 0;
-  padding: 0;
+  padding: 0 0 99px;
 }
 
 .new-collection-item {
@@ -254,7 +244,7 @@ background-color: rgb(26, 188, 156);
   margin-right: 30px;
 }
 
-.new-collection-item-link {
+.new-collection-item-card {
   display: block;
   width: 255px;
   height: 322px;
@@ -268,20 +258,20 @@ background-color: rgb(26, 188, 156);
 .caption {
   position: absolute;
   bottom: 0;
-  /* float: left; */
   width: 255px;
   height: 37px;
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
   background-color: rgb(50, 50, 50);
   padding-left: 13px;
+  cursor: pointer;
 }
 
 .product-name {
   display: inline-block;
   float: left;
-  font-size: 18px;
   line-height: 37px;
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
   text-align: left;
   margin: 0;
   padding: 0;
@@ -292,9 +282,6 @@ background-color: rgb(26, 188, 156);
   width: 54px;
   line-height: 38px;
   background-color: rgba(255, 255, 255, .3);
-  font-size: 18px;
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
   text-align: center;
 }
 
@@ -309,7 +296,7 @@ background-color: rgb(26, 188, 156);
   border-style: solid;
   background-color: rgb(50, 50, 50);
   opacity: 66%;
-  z-index: 66;
+  z-index: 1;
   visibility: hidden;
   transition: visibility .4s linear;
 }
@@ -376,7 +363,6 @@ background-color: rgb(26, 188, 156);
   width: 50px;
   float: left;
 }
-
 
 /* ФУТЕР */
 
