--- a/html-css/module-06/css/style.css
+++ b/html-css/module-06/css/style.css
@@ -120,7 +120,7 @@ transform: translateX(-50%);
 .menu-list {
   display: flex;
   justify-content: space-between;
-  width: 490px;
+  min-width: 490px;
   padding: 0;
   margin: 0;
   text-transform: uppercase;
@@ -145,7 +145,7 @@ transform: translateX(-50%);
   font-family: "Kaushan Script";
   text-transform: none;
   font-size: 24px;
-  line-height: 29px;
+  line-height: 50px;
   color: #333333;
   margin: 0 0 19px 0;
 }
@@ -157,8 +157,8 @@ transform: translateX(-50%);
   color: #333333;
   text-transform: uppercase;
   font-size: 30px;
-  line-height: 36px;
-  margin: 0 0 87px 0;
+  line-height: 50px;
+  margin: 0 0 80px 0;
 }
 
 .second-header::after {
@@ -166,7 +166,7 @@ transform: translateX(-50%);
   background-color: rgb(243, 129, 129);
   width: 60px;
   height: 3px;
-  bottom: -43px;
+  bottom: -33px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -281,14 +281,14 @@ transform: translateX(-50%);
 }
 
 .team-card-image {
-  margin-bottom: 28px;
+  margin-bottom: 20px;
 }
 
 .team-member-name {
   font-size: 14px;
   line-height: 17px;
   color: #333333;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   text-transform: uppercase;
 }
 
@@ -385,6 +385,10 @@ transform: translateX(-50%);
   font-size: 14px;
   padding: 10px 0 12px 0;
   color: #333333;
+}
+
+.legal-info {
+  margin: 0;
 }
 
 .footer-span {
