--- a/html-css/module-08/css/media.css
+++ b/html-css/module-08/css/media.css
@@ -3,7 +3,7 @@
 @media (min-width: 320px) and (max-width: 767px) {
   .header {
     padding: 20px 0 138px;
-    width: 320px;
+    /* width: 320px; */
     margin: 0 auto;
     background-image: url(../img/Head-image/header_mobile.png);
   }
@@ -113,7 +113,6 @@
 
 @media (min-width: 768px) and (max-width: 960px) {
   .header {
-    width: 768px;
     background-image: url(../img/Head-image/header_tablet.png);
   }
 
