--- a/html-css/module-08/css/media.css
+++ b/html-css/module-08/css/media.css
@@ -3,7 +3,6 @@
 @media (min-width: 320px) and (max-width: 767px) {
   .header {
     padding: 20px 0 138px;
-    /* width: 320px; */
     margin: 0 auto;
     background-image: url(../img/Head-image/header_mobile.png);
   }
@@ -12,20 +11,18 @@
     margin-bottom: 115px;
   }
 
-  .section {
-    width: 320px;
-  }
-
   .main-title {
     font-size: 30px;
     line-height: 36px;
     margin-bottom: 16px;
+    width: 300px;
   }
 
   .main-title-caption {
     font-size: 18px;
     line-height: 22px;
-    margin: 0 50px 18px;
+    width: 230px;
+    margin: 0 auto 18px;
   }
 
   .main-title-caption+button {
@@ -34,6 +31,7 @@
 
   .section.meet-a-partner {
     padding-bottom: 58px;
+    width: 320px;
   }
 
   .partners-list-item {
