--- a/html-css/module-09/css/style.css
+++ b/html-css/module-09/css/style.css
@@ -44,18 +44,6 @@
   color: inherit;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-a {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  color: inherit;
-}
-
 button {
   border: 2px solid transparent;
   border-radius: 20px;
@@ -63,7 +51,6 @@ button {
   font-size: 14px;
   line-height: 1.2;
   height: 40px;
-  padding: 0;
   outline: none;
   cursor: pointer;
 }
@@ -79,25 +66,18 @@ button {
 /* HEADER BUTTONS AND LOGO */
 
 .header-contain button {
-  width: 94px;
   height: 40px;
   transition: border-color .2s linear;
 }
 
 .header-contain button:hover,
 .header-contain button:focus {
-  border-color: #ffffff;
+  border-color: white;
 }
 
 .logo-link {
-  display: block;
   font-size: 20px;
   line-height: 1.2;
-}
-
-.navbar-brand {
-  margin: 0;
-  padding: 0;
 }
 
 .main-title-caption {
@@ -129,22 +109,16 @@ button {
   position: relative;
 }
 
-.partner-image {
-  margin-bottom: 20px;
-}
-
 .partner-name {
   font-size: 14px;
-  line-height: 17px;
-  margin: 0 0 17px;
+  line-height: 1.2;
 }
 
 .partner-description {
   font-family: "Roboto-thinn";
   font-size: 14px;
-  line-height: 17px;
+  line-height: 1.2;
   color: #666666;
-  margin: 0 0 29px;
 }
 
 /* PARTER ICONS */
@@ -176,7 +150,7 @@ button {
 
 .partners-list-button {
   color: #ff4e50;
-  width: 284px;
+  padding: 0 70px;
   height: 44px;
   transition: border-color .2s linear;
 }
