Removed excess row and col at main, added column classes to cells, amend breakpoints at bootstrap.css

--- a/html-css/module-09/css/style.css
+++ b/html-css/module-09/css/style.css
@@ -99,7 +99,7 @@ button {
 .meet-a-partner-title {
   font-size: 22px;
   line-height: 1.2;
-  margin: 0 0 20px;
+  margin-bottom: 20px;
 }
 
 /* PARTNERS LIST */
