--- a/html-css/module-11/src/sass/helpers/variables.scss
+++ b/html-css/module-11/src/sass/helpers/variables.scss
@@ -1,10 +1,10 @@
 // @import 'typography'
 
 $headers-main-font-stack: 'Montserrat';
-$headers-secondary-font-stack: 'Montserrat-400';
+$headers-secondary-font-stack: 'Montserrat';
 $headers-caption-font-stack: 'Kaushan Script';
-$service-section-main-font-stack: 'Roboto-400';
-$service-section-member-caption: 'Roboto-italy';
+$service-section-main-font-stack: 'Roboto';
+$service-section-member-caption: 'Roboto';
 
 $main-width: 1200px;
 $title-font-size: 14px;
