--- a/html-css/module-11/src/sass/components/header__title.scss
+++ b/html-css/module-11/src/sass/components/header__title.scss
@@ -1,5 +1,6 @@
 .header__title {
   font-family: $headers-main-font-stack;
+  font-weight: 400;
   font-size: 30px;
   color: $main-white-color;
   margin: 0 auto 90px;
