--- a/html-css/module-11/src/sass/main.scss
+++ b/html-css/module-11/src/sass/main.scss
@@ -4,8 +4,9 @@
 
 @import 'base';
 @import 'normalize';
-@import './helpers/variables';
+@import 'helpers/variables';
 @import 'helpers/mixins';
+@import 'helpers/placeholders';
 
 
 // COMPONENTS
