--- a/html-css/module-11/src/sass/components/header__list.scss
+++ b/html-css/module-11/src/sass/components/header__list.scss
@@ -1,10 +1,6 @@
 .header__list {
   @extend %list;
-  font-family: $headers-secondary-font-stack;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  font-family: $headers-main-font-stack;
   display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
   justify-content: flex-end;
 }
