--- a/html-css/module-11/src/sass/components/header__logo.scss
+++ b/html-css/module-11/src/sass/components/header__logo.scss
@@ -1,9 +1,11 @@
 .header__logo {
-    font-size: 30px;
-    line-height: 1.2;
+  @extend %link;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.2;
 
-    &:hover,
-    &:focus {
-      color: $accent-color-yellow;
-    }
+  &:hover,
+  &:focus {
+    color: $accent-color-yellow;
   }
+}
