--- a/html-css/module-11/src/sass/helpers/variables.scss
+++ b/html-css/module-11/src/sass/helpers/variables.scss
@@ -3,7 +3,6 @@
 $headers-main-font-stack: 'Montserrat';
 $headers-caption-font-stack: 'Kaushan Script';
 $service-section-main-font-stack: 'Roboto';
-$service-section-member-caption: 'Roboto';
 
 $main-width: 1200px;
 $title-font-size: 14px;
@@ -11,3 +10,5 @@ $main-white-color: #ffffff;
 $accent-color-yellow: #fce38a;
 $accent-color-red: #f38181;
 $accent-color-red-opacity: #f38181d9;
+$service-title-color: #333333;
+$caption-color: #999;
