--- a/html-css/module-11/src/sass/components/header/header__button.scss
+++ b/html-css/module-11/src/sass/components/header/header__button.scss
@@ -3,6 +3,7 @@
   color: $main-white-color;
   background-color: transparent;
   margin: 0 auto;
+  transition: all .2s linear;
 
   &:hover,
   &:focus {
