--- a/html-css/module-11/src/sass/components/header/header__title.scss
+++ b/html-css/module-11/src/sass/components/header/header__title.scss
@@ -1,9 +1,15 @@
 .header__title {
   font-family: $headers-main-font-stack;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 30px;
-  color: $main-white-color;
+  color: inherit;
   margin: 0 auto 90px;
   line-height: 1;
   text-transform: uppercase;
+
+  &_header {
+    font-size: 150px;
+    width: 900px;
+    margin-bottom: 125px;
+  }
 }
