--- a/html-css/module-11/src/sass/components/service-section/service__item.scss
+++ b/html-css/module-11/src/sass/components/service-section/service__item.scss
@@ -4,22 +4,23 @@
   text-align: left;
   padding-left: 82px;
 
-  $:not(:nth-child(n + 3)) {
+  &:not(:nth-child(n + 3)) {
     margin-bottom: 100px;
   }
 
   &::before {
     position: absolute;
+    display: inline-block;
     left: 22px;
     top: 1px;
   }
 
   &_photo::before {
-    content: url(..src/images/icons/service-clock.svg);
+    content: url(../src/images/icons/service-clock.svg);
   }
 
   &_web::before {
-    content: url(../images/icons/sevice-graph.svg);
+    content: url(../src/images/icons/sevice-graph.svg);
   }
 
   &_creative::before {
@@ -27,7 +28,7 @@
   }
 
   &_seo::before {
-    content: url(../images/icons/service-book.svg);
+    content: url(../src/images/icons/service-book.svg);
   }
 
   &_css::before {
@@ -35,7 +36,7 @@
   }
 
   &_digital::before {
-    content: url(../img/icons/service-target.svg);
+    content: url(../src/images/icons/service-target.svg);
   }
 
 }
