--- a/html-css/module-11/src/sass/helpers/variables.scss
+++ b/html-css/module-11/src/sass/helpers/variables.scss
@@ -8,7 +8,10 @@ $main-width: 1200px;
 $title-font-size: 14px;
 $main-white-color: #ffffff;
 $accent-color-yellow: #fce38a;
+$accent-color-yellow-opacity: #fce38ae6;
 $accent-color-red: #f38181;
 $accent-color-red-opacity: #f38181d9;
 $service-title-color: #333333;
-$caption-color: #999;
+$caption-color: #999999;
+$team-box-shadow: #95e1d3;
+$footer-button-color: #95e1d3;
