--- a/html-css/module-11/src/sass/main.scss
+++ b/html-css/module-11/src/sass/main.scss
@@ -12,24 +12,29 @@
 // COMPONENTS
 
 @import 'components/container';
-@import 'components/header';
-@import 'components/header__container';
-@import 'components/header__nav';
-@import 'components/header__logo';
-@import 'components/header__list';
-@import 'components/header__caption';
-@import 'components/header__title_header';
+@import 'components/header/header';
+@import 'components/header/header__container';
+@import 'components/header/header__nav';
+@import 'components/header/header__logo';
+@import 'components/header/header__list';
+@import 'components/header/header__caption';
+@import 'components/header/header__title';
 @import 'components/button';
-@import 'components/header__button';
-@import 'components/header__item';
+@import 'components/header/header__button';
+@import 'components/header/header__item';
 @import 'components/underlined';
-@import 'components/service__list';
-@import 'components/service__item';
-@import 'components/service__title';
+@import 'components/service-section/service__list';
+@import 'components/service-section/service__item';
+@import 'components/service-section/service__title';
+@import 'components/team-section/team__caption';
+@import 'components/team-section/team__list';
+@import 'components/team-section/team__item';
+@import 'components/team-section/team__image';
+@import 'components/hover-menu';
+@import 'components/hover__list_socials';
+@import 'components/hover__icon';
+@import 'components/footer/footer__button';
+@import 'components/footer/footer__form';
+@import 'components/footer/footer';
 // @import 'components/';
 // @import 'components/';
-// @import 'components/';
-// @import 'components/';
-// @import 'components/';
-// @import 'components/';
-// @import: 'components/';
