--- a/html-css/module-11/src/sass/components/hover__icon.scss
+++ b/html-css/module-11/src/sass/components/hover__icon.scss
@@ -7,7 +7,8 @@
   background-position: center;
   background-repeat: no-repeat;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $accent-color-red;
     fill: $main-white-color;
   }
