--- a/html-css/module-11/src/sass/helpers/placeholders.scss
+++ b/html-css/module-11/src/sass/helpers/placeholders.scss
@@ -9,3 +9,14 @@
   text-decoration: none;
   color: inherit;
 }
+
+%button {
+  font-weight: 700;
+  display: block;
+  min-width: 153px;
+  height: 40px;
+  border: 3px solid;
+  text-transform: uppercase;
+  font-size: 14px;
+  cursor: pointer;
+}
