--- a/javascript/goit-js-hw-11-timer/styles.css
+++ b/javascript/goit-js-hw-11-timer/styles.css
@@ -16,3 +16,21 @@
   border-radius: 10%;
   color: snow;
 }
+
+.message-box {
+  display: flex;
+  background-color: #f1f1f1;
+  font-family: sans-serif;
+  color: #3e393e;
+  width: 40%;
+  justify-content: center;
+}
+
+.countdouwn-end-message {
+  display: none;
+}
+
+.visible {
+  display: block;
+
+}
