--- a/javascript/goit-js-hw-12-countries/src/styles.css
+++ b/javascript/goit-js-hw-12-countries/src/styles.css
@@ -16,8 +16,51 @@ body {
   min-height: 100vh;
   margin: 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
-
+  flex-direction: column;
+  flex-wrap: wrap;
+  color: lightslategrey;
+  padding: 50px 0;
+  justify-content: start;
   background-image: url('./images/bg-pattern.png');
+}
+
+.search-form {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+
+.country-list {
+  display: block;
+  margin: 20px auto;
+
+}
+
+.search-form input {
+  margin: 0 auto;
+  width: 50%;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 2px solid lightslategrey;
+  padding: 0 10px;
+  outline: none;
+}
+
+.matched-country-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.country-header {
+  display: block;
+  width: 100%;
+  text-align: center;
+  line-height: 200%;
+}
+
+.block {
+  padding: 0 20px;
 }
