--- a/javascript/goit-js-hw-12-countries/src/styles.css
+++ b/javascript/goit-js-hw-12-countries/src/styles.css
@@ -20,7 +20,7 @@ body {
   flex-wrap: wrap;
   color: lightslategrey;
   padding: 50px 0;
-  justify-content: start;
+  justify-content: flex-start;
   background-image: url('./images/bg-pattern.png');
 }
 
@@ -33,7 +33,6 @@ body {
 .country-list {
   display: block;
   margin: 20px auto;
-
 }
 
 .search-form input {
