--- a/javascript/goit-js-hw-13-image-finder/src/styles.css
+++ b/javascript/goit-js-hw-13-image-finder/src/styles.css
@@ -28,6 +28,11 @@ body {
 
 .photo-card img {
   max-width: 100%;
+
+}
+
+.photo-card img:hover {
+  cursor: pointer;
 }
 
 .stats {
@@ -47,4 +52,54 @@ body {
 .material-icons {
   font-size: 13px;
   padding: 5px 5px 5px 0;
+}
+
+/* Lightbox */
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 200ms linear;
+}
+
+.lightbox.is-open {
+  opacity: 1;
+  pointer-events: initial;
+}
+
+.lightbox__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.lightbox__content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: scale(0.9);
+  transition: transform 200ms ease-in-out;
+}
+
+.lightbox__image {
+  width: auto;
+  height: auto;
+  max-height: 100vh;
+  max-width: 100vw;
+}
+
+.lightbox.is-open .lightbox__content {
+  transform: scale(1);
 }
