--- a/javascript/goit-js-hw-13-image-finder/src/templates/photo-card.hbs
+++ b/javascript/goit-js-hw-13-image-finder/src/templates/photo-card.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li>
   <div class="photo-card">
-    <img src="{{webformatURL}}" alt="{{tags}}" />
+    <img srcset="{{largeImageURL}}" src="{{webformatURL}}" alt="{{tags}}" />
 
     <div class="stats">
       <p class="stats-item">
@@ -24,5 +24,3 @@
   </div>
 </li>
 {{/each}}
-
-{{!-- largeImageURL - ссылка на большое изображение (смотри пункт 'дополнительно') --}}
