--- a/javascript/goit-js-hw-13-image-finder/src/styles.css
+++ b/javascript/goit-js-hw-13-image-finder/src/styles.css
@@ -17,6 +17,27 @@ body {
   max-width: 100%;
 }
 
+.search-form {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.search-form input {
+  width: 500px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  background-color: #f4f5ea;
+  padding: 20px;
+  font-family: inherit;
+  font-size: 24px;
+  color: rgb(88, 86, 86);
+  outline: none;
+  text-align: center;
+
+}
+
 .gallery {
   display: grid;
   grid-column-gap: 10px;
@@ -28,7 +49,7 @@ body {
 
 .photo-card img {
   max-width: 100%;
-
+  min-height: 120px;
 }
 
 .photo-card img:hover {
@@ -47,6 +68,9 @@ body {
   font-size: 11px;
   display: flex;
   align-items: center;
+  opacity: 0;
+  transition: opacity 500ms linear;
+  /* плавное появление статистики под картинкой */
 }
 
 .material-icons {
