--- a/javascript/goit-js-hw-13-image-finder/src/templates/photo-card.hbs
+++ b/javascript/goit-js-hw-13-image-finder/src/templates/photo-card.hbs
@@ -1,26 +1,26 @@
 {{#each this}}
 <li>
-  <div class="photo-card">
-    <img srcset="{{largeImageURL}}" src="{{webformatURL}}" alt="{{tags}}" />
+  <div class="photo-card"">
+    <img srcset=" {{largeImageURL}}" src="{{webformatURL}}" alt="{{tags}}" />
 
-    <div class="stats">
-      <p class="stats-item">
-        <i class="material-icons">comment</i>
-        {{comments}}
-      </p>
-      <p class="stats-item">
-        <i class="material-icons">thumb_up</i>
-        {{likes}}
-      </p>
-      <p class="stats-item">
-        <i class="material-icons">cloud_download</i>
-        {{downloads}}
-      </p>
-      <p class="stats-item">
-        <i class="material-icons">visibility</i>
-        {{views}}
-      </p>
-    </div>
+  <div class="stats">
+    <p class="stats-item">
+      <i class="material-icons">comment</i>
+      {{comments}}
+    </p>
+    <p class="stats-item">
+      <i class="material-icons">thumb_up</i>
+      {{likes}}
+    </p>
+    <p class="stats-item">
+      <i class="material-icons">cloud_download</i>
+      {{downloads}}
+    </p>
+    <p class="stats-item">
+      <i class="material-icons">visibility</i>
+      {{views}}
+    </p>
+  </div>
   </div>
 </li>
 {{/each}}
